--- a/MediaPleyer/widget.ui
+++ b/MediaPleyer/widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>609</width>
-    <height>401</height>
+    <height>574</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>609</width>
-    <height>401</height>
+    <height>574</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>609</width>
-    <height>401</height>
+    <height>574</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -116,14 +116,14 @@
   <widget class="QPushButton" name="pushButtonOpen">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>350</y>
-     <width>80</width>
-     <height>25</height>
+     <x>10</x>
+     <y>530</y>
+     <width>48</width>
+     <height>24</height>
     </rect>
    </property>
    <property name="text">
-    <string>Open</string>
+    <string>ADD</string>
    </property>
   </widget>
   <widget class="QSlider" name="horizontalSliderVolume">
@@ -170,7 +170,7 @@
     <rect>
      <x>30</x>
      <y>120</y>
-     <width>55</width>
+     <width>221</width>
      <height>16</height>
     </rect>
    </property>
@@ -189,6 +189,81 @@
    </property>
    <property name="text">
     <string>Duration</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonMute">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>70</y>
+     <width>31</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QTableView" name="tableViewPlaylist">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>190</y>
+     <width>551</width>
+     <height>321</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonDEL">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>530</y>
+     <width>48</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>DEL</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonCLR">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>530</y>
+     <width>48</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>CLR</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonShuffle">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>530</y>
+     <width>48</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>S</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonLoop">
+   <property name="geometry">
+    <rect>
+     <x>530</x>
+     <y>530</y>
+     <width>48</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>L</string>
    </property>
   </widget>
  </widget>
